Implementacion de navs

--- a/finanzas/app/templates/home.html
+++ b/finanzas/app/templates/home.html
@@ -3,11 +3,16 @@
 
 {% block main %}
     <header>
-        <h1>Bienvenido a la Página de Prueba</h1>
-        <img src="{% static 'img/imagen-prueba.jpeg' %}" alt="Imagen de ejemplo">
+        <h1 class="text-center">Bienvenido a la Página de Prueba</h1>
+
+        <!--<img src="{% static 'img/imagen-prueba.jpeg' %}" alt="Imagen de ejemplo">-->
+     
+        
     </header>
     <p>Esta es una plantilla de ejemplo para tu proyecto Django.</p>
-    <footer>
-        <p>&copy; 2024 Mi Proyecto</p>
-    </footer>
+        
+
+    
+
+    
 {% endblock %}
