Ajustes de navs y navegacion

--- a/finanzas/app/templates/home.html
+++ b/finanzas/app/templates/home.html
@@ -3,13 +3,13 @@
 
 {% block main %}
     <header>
-        <h1 class="text-center">Bienvenido a la Página de Prueba</h1>
+        <h1 class="text-center">Bienvenido a Finamagar</h1>
 
         <!--<img src="{% static 'img/imagen-prueba.jpeg' %}" alt="Imagen de ejemplo">-->
      
         
     </header>
-    <p>Esta es una plantilla de ejemplo para tu proyecto Django.</p>
+   <!-- <p>Esta es una plantilla de ejemplo para tu proyecto Django.</p>-->
         
 
     
