--- a/finanzas/app/templates/ingresos.html
+++ b/finanzas/app/templates/ingresos.html
@@ -10,10 +10,12 @@
     
 </head>
 <body>
-   <!-- <header>
+    <!--<header>
         <img src="{% static 'img/imagen-prueba.jpeg' %}" alt="Imagen de ejemplo">
     </header>-->
-    
+    <header align="center">
+        <img src="{% static 'img/ingreso.JPG' %}" align="center">
+    </header>
     
     
 </body>
