se agrego imagen al home

--- a/finanzas/app/templates/gastos.html
+++ b/finanzas/app/templates/gastos.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header align="center">
-        <img src="{% static 'img/gastos.JPG' %}" align="center" >
+        <img src="{% static 'img/gastos.JPG' %}" >
     </header>
 </body>
 </html>
