--- a/finanzas/app/templates/home.html
+++ b/finanzas/app/templates/home.html
@@ -2,10 +2,10 @@
 {% load static %}
 
 {% block main %}
-    <header>
+    <header align="center">
         <h1 class="text-center">Bienvenido a Finamagar</h1>
 
-        <!--<img src="{% static 'img/imagen-prueba.jpeg' %}" alt="Imagen de ejemplo">-->
+        <img src="{% static 'img/imagen-prueba.jpeg' %}" width="500 px" >
      
         
     </header>
