--- a/finanzas/app/templates/ingresos.html
+++ b/finanzas/app/templates/ingresos.html
@@ -2,22 +2,163 @@
 {% load static %}
 
 {% block main %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<div class="container mt-5"></div>
+    <div class="form-section">
+        <h3 class="text-center">Registrar Ingresos</h3>
+        <form method="POST" action="">
+            {% csrf_token %}
+            <div class="row">
+
+                <!-- Nombre del Ingreso-->
+                <div class="col-md-4 mb-3">
+                    <label for="nombre_ingreso" class="form-label">Nombre del Ingreso</label>
+                    <input type="text" class="form-control" id="nombre_ingreso" name="nombre_ingreso" required>
+                </div>
+
+                <!-- Métodos de pago-->
+                <div class="col-md-4 mb-3">
+                    <label for="metodo_pago" class="form-label">Método de Pago</label>
+                    <select class="form-select" id="metodo_pago" name="metodo_pago" required>
+                        <option value="efectivo">Efectivo</option>
+                        <option value="tarjeta">Tarjeta</option>
+                    </select>
+                </div>
+
+                <!-- Monto Fijo check -->
+                <div class="col-md-4 mb-3 d-flex align-items-center">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="ingreso_fijo" name="tipo_ingreso" value="fijo">
+                        <label class="form-check-label" for="ingreso_fijo" style="white-space: nowrap;">Ingreso Fijo</label>
+                    </div>
+                </div>                
+            </div>
+
+            <!-- Categorias -->
+            <div class="row">
+                <div class="col-md-4 mb-3">
+                    <label for="categoria" class="form-label">Categoría</label>
+                    <div class="input-group">
+                        <select class="form-select" id="categoria" name="categoria" required>
+                            <option value="salario">Salario</option>
+                            <option value="freelance">Freelance</option>
+                            <option value="inversiones">Inversiones</option>
+                            <option value="alquiler">Alquiler</option>
+                            <option value="intereses">Intereses</option>
+                            <option value="regalos">Regalos</option>
+                            <option value="bonificaciones">Bonificaciones</option>
+                            <option value="ventas">Ventas</option>
+                            <option value="dividendos">Dividendos</option>
+                            <option value="premios">Premios</option>
+                            <option value="comisiones">Comisiones</option>
+                            <option value="gastos_reembolsados">Gastos Reembolsados</option>
+                            <option value="otros">Otros</option>
+                        </select>
+                        <button class="btn btn-outline-secondary" type="button" id="add_category">+</button>
+                    </div>
+                </div>
+
+                <!-- Descripcion -->
+                <div class="col-md-4 mb-3">
+                    <label for="descripcion" class="form-label">Descripción</label>
+                    <input type="text" class="form-control" id="descripcion" name="descripcion">
+                </div>
+
+                <!-- Frecuencia de Ingreso -->
+                <div class="col-md-4 mb-3">
+                    <label for="frecuencia_ingreso" class="form-label">Frecuencia de Ingreso</label>
+                    <input type="text" class="form-control" id="frecuencia_ingreso" name="frecuencia_ingreso" required>
+                </div>
+            </div>
+       
+            <div class="row">
+
+                <!-- Monto -->
+                <div class="col-md-4 mb-3">
+                    <label for="monto" class="form-label">Monto</label>
+                    <input type="text" class="form-control" id="monto" name="monto" value="$15.000" required>
+                </div>
+
+                <!-- Monto a ahorrar -->
+                <div class="col-md-4 mb-3">
+                    <div class="d-flex justify-content-between align-items-center mb-2">
+                        <label for="monto_ahorrar" class="form-label">Monto a Ahorrar</label>
+                        <div class="d-flex align-items-center">
+                            <span class="me-2">$</span>
+                            <div class="form-check form-switch">
+                                <input class="form-check-input" type="checkbox" id="montoSwitch" name="montoSwitch">
+                            </div>
+                            <span class="ms-2">%</span>
+                        </div>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="monto_ahorrar" name="monto_ahorrar">
+                    </div>
+                </div>
+
+                <!-- Duracion -->
+                <div class="col-md-4 mb-3">
+                    <div class="d-flex justify-content-between align-items-center mb-2">
+                        <label for="duracion" class="form-label">Duración</label>
+                        <div class="d-flex align-items-center">
+                            <div class="form-check form-switch">
+                                <input class="form-check-input" type="checkbox" id="duracionSwitch" name="duracionSwitch">
+                            </div>
+                            <span class="ms-2">Indefinido</span>
+                        </div>
+                    </div>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="duracion" name="duracion" placeholder="">
+                    </div>
+                </div>                
+            </div>
+
+            <div class="d-grid">
+                <button type="submit" class="btn btn-primary btn-lg">Agregar</button>
+            </div>
+        </form>
+    </div>
+
+    <!-- Listado de Ingresos -->
+    <div class="form-section">
+        <ul class="nav nav-tabs" id="ingresosTabs" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="ingresos-fijos-tab" data-bs-toggle="tab" data-bs-target="#ingresos-fijos" type="button" role="tab" aria-controls="ingresos-fijos" aria-selected="true">Ingresos Fijos</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="ingresos-variables-tab" data-bs-toggle="tab" data-bs-target="#ingresos-variables" type="button" role="tab" aria-controls="ingresos-variables" aria-selected="false">Ingresos Variables</button>
+            </li>
+        </ul>
+        <div class="tab-content" id="ingresosTabsContent">
+            <div class="tab-pane fade show active" id="ingresos-fijos" role="tabpanel" aria-labelledby="ingresos-fijos-tab">
+                <!-- Listado de Ingresos Fijos -->
+                <div class="d-flex justify-content-between align-items-center p-3 border-bottom">
+                    <div>
+                        <span> Sueldo Trabajo 1 - Salario - $15.000 - Monto Fijo </span>
+                    </div>
+                    <div>
+                        <button class="btn btn-outline-primary btn-sm"><i class="bi bi-eye"></i></button>
+                        <button class="btn btn-outline-secondary btn-sm"><i class="bi bi-pencil"></i></button>
+                        <button class="btn btn-outline-danger btn-sm"><i class="bi bi-trash"></i></button>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="tab-pane fade" id="ingresos-variables" role="tabpanel" aria-labelledby="ingresos-variables-tab">
+                <!-- Listado de Ingresos Variables -->
+            </div>
+        </div>
+    </div>
     
-</head>
-<body>
-    <!--<header>
-        <img src="{% static 'img/imagen-prueba.jpeg' %}" alt="Imagen de ejemplo">
-    </header>-->
-    <header align="center">
-        <img src="{% static 'img/ingreso.JPG' %}" align="center">
-    </header>
-    
-    
-</body>
-</html>
+</div>
+
+<style>
+    .form-section {
+        background-color: rgb(255, 255, 255);
+        border-radius: 10px; 
+        padding: 1%; 
+        margin: 1%; 
+    }
+</style>
+
 {% endblock %}
+
