--- a/finanzas/app/templates/base.html
+++ b/finanzas/app/templates/base.html
@@ -95,7 +95,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
-<footer class="bg-dark text-white">
+<footer id="footer" class="bg-dark text-white">
     <div class="row">
         <div class="col-6 text-start">
             <p>&copy; UTN-FRLP Finanzas</p>
@@ -106,3 +106,9 @@
     </div>
 </footer>
 </html>
+
+<style> 
+  #footer {
+    position: relative;
+  } 
+</style>
