--- a/finanzas/app/templates/ingresos.html
+++ b/finanzas/app/templates/ingresos.html
@@ -152,6 +152,9 @@
 </div>
 
 <style>
+    body {
+        background-color: #dfdfdf;
+    }
     .form-section {
         background-color: rgb(255, 255, 255);
         border-radius: 10px; 
