--- a/finanzas/app/templates/base.html
+++ b/finanzas/app/templates/base.html
@@ -64,7 +64,7 @@
               <a class="nav-link" href="{% url 'gastos' %}">Gastos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'ingresos' %}">Ingresos</a>
+                <a class="nav-link" href="{% url 'registrar_ingreso' %}">Ingresos</a>
               </li>
             <!--<li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
