--- a/finanzas/app/templates/ingresos.html
+++ b/finanzas/app/templates/ingresos.html
@@ -5,7 +5,7 @@
 <div class="container mt-5"></div>
     <div class="form-section">
         <h3 class="text-center">Registrar Ingresos</h3>
-        <form method="POST" action="">
+        <form method="POST" action="{% url 'registrar_ingreso' %}">
             {% csrf_token %}
             <div class="row">
 
@@ -66,7 +66,7 @@
                 <!-- Frecuencia de Ingreso -->
                 <div class="col-md-4 mb-3">
                     <label for="frecuencia_ingreso" class="form-label">Frecuencia de Ingreso</label>
-                    <input type="text" class="form-control" id="frecuencia_ingreso" name="frecuencia_ingreso" required>
+                    <input type="text" class="form-control" id="frecuencia_ingreso" name="frecuencia_ingreso">
                 </div>
             </div>
        
@@ -75,7 +75,7 @@
                 <!-- Monto -->
                 <div class="col-md-4 mb-3">
                     <label for="monto" class="form-label">Monto</label>
-                    <input type="text" class="form-control" id="monto" name="monto" value="$15.000" required>
+                    <input type="text" class="form-control" id="monto" name="monto" required>
                 </div>
 
                 <!-- Monto a ahorrar -->
@@ -131,20 +131,38 @@
         <div class="tab-content" id="ingresosTabsContent">
             <div class="tab-pane fade show active" id="ingresos-fijos" role="tabpanel" aria-labelledby="ingresos-fijos-tab">
                 <!-- Listado de Ingresos Fijos -->
+                {% for ingreso in ingresos_fijos %}
                 <div class="d-flex justify-content-between align-items-center p-3 border-bottom">
                     <div>
-                        <span> Sueldo Trabajo 1 - Salario - $15.000 - Monto Fijo </span>
+                        <span>{{ ingreso.categoria }} - ${{ ingreso.monto }} - {{ingreso.descripcion}} - {{ ingreso.fecha }} </span>:
                     </div>
                     <div>
                         <button class="btn btn-outline-primary btn-sm"><i class="bi bi-eye"></i></button>
                         <button class="btn btn-outline-secondary btn-sm"><i class="bi bi-pencil"></i></button>
                         <button class="btn btn-outline-danger btn-sm"><i class="bi bi-trash"></i></button>
                     </div>
-                    
                 </div>
+                {% empty %}
+                <div class="p-3">No hay ingresos fijos registrados.</div>
+                {% endfor %}
             </div>
+            
             <div class="tab-pane fade" id="ingresos-variables" role="tabpanel" aria-labelledby="ingresos-variables-tab">
                 <!-- Listado de Ingresos Variables -->
+                {% for ingreso in ingresos_variables %}
+                <div class="d-flex justify-content-between align-items-center p-3 border-bottom">
+                    <div>
+                        <span>{{ ingreso.categoria }} - ${{ ingreso.monto }} - {{ingreso.descripcion}} - {{ ingreso.fecha }}</span>:
+                    </div>
+                    <div>
+                        <button class="btn btn-outline-primary btn-sm"><i class="bi bi-eye"></i></button>
+                        <button class="btn btn-outline-secondary btn-sm"><i class="bi bi-pencil"></i></button>
+                        <button class="btn btn-outline-danger btn-sm"><i class="bi bi-trash"></i></button>
+                    </div>
+                </div>
+                {% empty %}
+                <div class="p-3">No hay ingresos variables registrados.</div>
+                {% endfor %}
             </div>
         </div>
     </div>
