--- a/finanzas/app/templates/ingresos.html
+++ b/finanzas/app/templates/ingresos.html
@@ -141,7 +141,10 @@
                     <div>
                         <button class="btn btn-outline-primary btn-sm"><i class="bi bi-eye"></i></button>
                         <button class="btn btn-outline-secondary btn-sm"><i class="bi bi-pencil"></i></button>
-                        <button class="btn btn-outline-danger btn-sm"><i class="bi bi-trash"></i></button>
+                        <form action="{% url 'eliminar_ingreso' ingreso_pk=ingreso.pk %}" method="post" style="display: inline;">
+                            {% csrf_token %}
+                            <button class="btn btn-outline-danger btn-sm" type="submit"><i class="bi bi-trash"></i></button>
+                        </form>
                     </div>
                 </div>
                 {% empty %}
@@ -159,7 +162,10 @@
                     <div>
                         <button class="btn btn-outline-primary btn-sm"><i class="bi bi-eye"></i></button>
                         <button class="btn btn-outline-secondary btn-sm"><i class="bi bi-pencil"></i></button>
-                        <button class="btn btn-outline-danger btn-sm"><i class="bi bi-trash"></i></button>
+                        <form action="{% url 'eliminar_ingreso' ingreso_pk=ingreso.pk %}" method="post" style="display: inline;">
+                            {% csrf_token %}
+                            <button class="btn btn-outline-danger btn-sm" type="submit"><i class="bi bi-trash"></i></button>
+                        </form>
                     </div>
                 </div>
                 {% empty %}
