--- a/finanzas/app/templates/base.html
+++ b/finanzas/app/templates/base.html
@@ -9,7 +9,7 @@
 
     <style>
         footer {
-            position: fixed;
+            position: relative;
             bottom: 0;
             width: 100%;
             background-color: #f8f9fa; /* Color de fondo del footer */
@@ -61,7 +61,7 @@
               <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'gastos' %}">Gastos</a>
+              <a class="nav-link" href="{% url 'registrar_gasto' %}">Gastos</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'ingresos' %}">Ingresos</a>
@@ -105,4 +105,6 @@
         </div>
     </div>
 </footer>
+
+
 </html>
