--- a/finanzas/app/templates/ingresos.html
+++ b/finanzas/app/templates/ingresos.html
@@ -45,7 +45,7 @@
                                <option value="{{ categoria.id }}">{{ categoria.nombre }}</option>
                             {% endfor %}
                         </select>
-                        <button class="btn btn-outline-secondary" type="button" id="add_category">+</button>
+                        <button class="btn btn-outline-secondary" type="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop" id="add_category">+</button>
                     </div>
                 </div>
 
@@ -166,6 +166,47 @@
     </div>
     
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">Agregar Categoria</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form method="POST" action="{% url 'cargar_categoria' %}">
+                    {% csrf_token %}
+                    <div class="row">
+                        <div class="d-flex align-items-center">
+                            <!--Nombre categoria-->
+                            <div class="col-md-12 mb-3">
+                                <label for="nombre_categoria" class="form-label">Nombre categoria *</label>
+                                <input type="text" class="form-control" id="id_categoria" name="nombre_categoria"
+                                    required>
+                            </div>
+                        </div>
+                        <div class="d-flex align-items-center">
+                            <div class="col-md-12 mb-3">
+                                <label for="detalle_categoria" class="form-label">Detalle</label>
+                                <input type="text" class="form-control" id="detalle_categoria" name="detalle_categoria">
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                            <button type="submit" class="btn btn-primary">Cargar</button>
+                        </div>
+
+                </form>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
 
 <style>
     body {
