--- a/finanzas/app/templates/ingresos.html
+++ b/finanzas/app/templates/ingresos.html
@@ -87,7 +87,7 @@
 
             <!-- Monto a ahorrar -->
             <div class="col-md-4 mb-3">
-                <div class="d-flex justify-content-between align-items-center mb-2">
+                <div class="d-flex justify-content-between align-items-center">
                     <label for="monto_ahorrar" class="form-label">Monto a Ahorrar</label>
                     <div class="d-flex align-items-center">
                         <span class="me-2">$</span>
@@ -105,7 +105,7 @@
             <div class="col-md-4 mb-3">
                 <div class="row">
                     <!-- Desde -->
-                    <div class="col my-2"> <!-- Añadido my-2 para margen vertical -->
+                    <div class="col"> 
                         <div class="d-flex flex-column mb-2">
                             <label for="fechaDesde" class="form-label">Desde</label>
                             <input type="date" class="form-control" id="fechaDesde" name="fechaDesde" placeholder="">
@@ -113,7 +113,7 @@
                     </div>
             
                     <!-- Hasta -->
-                    <div class="col"> <!-- Añadido my-2 para margen vertical -->
+                    <div class="col">
                         <div class="d-flex flex-column mt-2">
                             <div class="d-flex justify-content-between align-items-center">
                                 <label for="fechaHasta" class="form-label mb-0">Hasta</label>
