--- a/finanzas/app/templates/ingresos.html
+++ b/finanzas/app/templates/ingresos.html
@@ -179,7 +179,9 @@
                     <form action="{% url 'eliminar_ingreso' ingreso_pk=ingreso.pk %}" method="post"
                         style="display: inline;">
                         {% csrf_token %}
-                        <button class="btn btn-outline-danger btn-sm" type="submit"><i class="bi bi-trash"></i></button>
+                        <button class="btn btn-outline-danger btn-sm" type="button" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal" >
+                            <i class="bi bi-trash"></i>
+                        </button>
                     </form>
                 </div>
             </div>
@@ -205,11 +207,14 @@
                         onclick="abrirModalEditar('{{ingreso.id}}')">
                         <i class="bi bi-pencil"></i>
                     </button>
-
+                    
+                    <!-- Eliminar -->
                     <form action="{% url 'eliminar_ingreso' ingreso_pk=ingreso.pk %}" method="post"
                         style="display: inline;">
                         {% csrf_token %}
-                        <button class="btn btn-outline-danger btn-sm" type="submit"><i class="bi bi-trash"></i></button>
+                        <button class="btn btn-outline-danger btn-sm" type="button" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal" >
+                            <i class="bi bi-trash"></i>
+                        </button>
                     </form>
                 </div>
             </div>
@@ -315,6 +320,27 @@
     </div>
 </div>
 
+ <!-- Modal Confirmación de Eliminacion --></div>
+ <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="confirmDeleteModalLabel">Confirmar Eliminación</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                ¿Está seguro de que desea eliminar este ingreso?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                <form id="deleteForm" action="" method="post" style="display: inline">
+                    {% csrf_token %}
+                    <button class="btn btn-danger" type="submit">Eliminar</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 <style>
     body {
