--- a/finanzas/app/templates/base.html
+++ b/finanzas/app/templates/base.html
@@ -80,6 +80,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'registrar_ingreso' %}">Ingresos</a>
               </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'reporte_financiero' %}">Reporte Financiero</a>
+            </li>
             <!--<li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Dropdown
